# file-watcher

./: Cargo.toml  README.md  ignore.txt
src/: main.rs
src/cli/: client.rs
src/watcher/: filter.rs  handlers.rs  ignore.rs  mod.rs  worker.rs
