[package]
name = "fileWatcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
metrics = "0.24.3"
notify = "8.2.0"
notify-debouncer-full = { version = "0.6.0", features = ["crossbeam-channel"] }
notify-debouncer-mini = { version = "0.7.0", features = ["crossbeam-channel"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
walkdir = "2.5.0"
